--- a/jmeter-5.6.3-17-alpine/Dockerfile
+++ b/jmeter-5.6.3-17-alpine/Dockerfile
@@ -1,4 +1,5 @@
-FROM openjdk:17-alpine
+#FROM openjdk:17-alpine
+FROM openjdk:17-alpine3.14
 
 ENV JMETER_VERSION=5.6.3 \
     CMDRUNNER_VERSION=2.2 \
@@ -17,7 +18,11 @@ RUN apk add --no-cache curl bash \
  && curl -o ${JMETER_HOME}/lib/ext/jmeter-plugins-manager-${PLUGINMGR_VERSION}.jar https://repo1.maven.org/maven2/kg/apc/jmeter-plugins-manager/${PLUGINMGR_VERSION}/jmeter-plugins-manager-${PLUGINMGR_VERSION}.jar \
  && java -cp ${JMETER_HOME}/lib/ext/jmeter-plugins-manager-${PLUGINMGR_VERSION}.jar org.jmeterplugins.repository.PluginManagerCMDInstaller \
  && cd ${JMETER_HOME}/bin \
- && sh PluginsManagerCMD.sh install-all-except jpgc-hadoop,jpgc-oauth \
+ && sh PluginsManagerCMD.sh available  \
+ && sh PluginsManagerCMD.sh status  \
+ && sh PluginsManagerCMD.sh install jpgc-casutg \
+ && sh PluginsManagerCMD.sh status  \
+# && sh PluginsManagerCMD.sh install-all-except jpgc-hadoop,jpgc-oauth \
  && sleep 2 \
  && sh PluginsManagerCMD.sh status \
  && rm -rf ${JMETER_HOME}/docs ${JMETER_HOME}/printable_docs \
@@ -33,5 +38,3 @@ RUN chmod +x /docker-entrypoint.sh
 EXPOSE 1099 50000
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
-
-
